# cascade-linter

./: .gitignore  CHANGELOG.md  GITHUB_SETUP.md  LICENSE  QUICK_START.md  README.md  cascade-linter.toml  cleanup_repo.bat  complete_push.bat  create_gui_branch.bat  demo_logging.py  enhanced_launcher.py  fix_push_conflict.bat  install_and_test_custom_widgets.py  launch_enhanced.py  launch_gui.py  launch_gui_win.py  manual_push.bat  push_to_github.bat  push_to_github.sh  push_to_github_fixed.bat  push_to_github_fixed.sh  pyproject.toml  requirements-gui.txt  requirements.txt  safe_format.py  simple_gui_test.py  widget_showcase.py
assets/themes/: corps.qss  dark-purple.qss  dark.qss  dracula.qss  dweeb.qss  light.qss  retro-green.qss  solarized-dark.qss  solarized-light.qss
cascade_linter/: __init__.py  __main__.py  actionable_insights.py  cli.py  cli_enhanced.py  config.py  core.py  dependency_analyzer.py  enhanced_dependency_analyzer.py  logging_utils.py
cascade_linter/gui/: __init__.py  main_window.py
cascade_linter/gui/dialogs/: HelpPopup.py  SettingsDialog.py  __init__.py
cascade_linter/gui/tools/: AnimationRunner.py  BackendIntegration.py  BatchManager.py  ConfigManager.py  LogExporter.py  ThemeLoader.py  __init__.py  analytics_backend.py  beginner_helpers.py  logging_config.py  simple_analytics.py
cascade_linter/gui/widgets/: LogViewer.py  MetricCard.py  ProgressDonut.py  __init__.py  analytics_tab.py  batch_processing.py  beautiful_loaders.py  compatibility.py  enhanced_analytics_tab.py  enhanced_directory_dialog.py  enhanced_loaders.py  error_explanation_widget.py  issue_browser.py  results_dashboard.py  settings_dialog.py
docs/: GUI_DEVELOPMENT.md  GUI_THEME_STRATEGY.md  Logging.md  USER_GUIDE.md
test_sample/: sample.py
