[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cascade-linter"
version = "1.1.1"
description = "Beautiful Python Code Quality Tool with GUI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["linting", "python", "code-quality", "gui", "ruff", "flake8", "pylint", "bandit", "mypy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "rich>=13.0.0",
    "structlog>=23.1.0",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.5.0",
    "QT-PyQt-PySide-Custom-Widgets>=1.0.0",
    "qdarkstyle>=3.1.0",
    "qt-material>=2.14",
    "qtawesome>=1.2.0",
    "pytz>=2023.3",
]
dev = [
    "autoflake>=2.0.0",
    "autopep8>=2.0.0",
    "bandit>=1.7.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "watchfiles>=0.20.0",
]
all = [
    "cascade-linter[gui,dev]"
]

[project.urls]
Homepage = "https://github.com/yourusername/cascade-linter"
Documentation = "https://github.com/yourusername/cascade-linter#readme"
Repository = "https://github.com/yourusername/cascade-linter.git"
"Bug Tracker" = "https://github.com/yourusername/cascade-linter/issues"

[project.scripts]
cascade-linter = "cascade_linter.cli:main"
cascade-linter-gui = "cascade_linter.gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cascade_linter*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"cascade_linter" = ["py.typed"]

# Development tools configuration
[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | backup
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "rich.*",
    "structlog.*",
    "PySide6.*",
    "qtawesome.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=cascade_linter",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gui: marks tests as GUI tests (require PySide6)",
]

# Linter exclusions for backup and development artifacts
[tool.ruff]
extend-exclude = [
    "backup/",
    "*.bak",
    "*_backup*",
    "*.broken",
]

[tool.flake8]
extend-exclude = [
    "backup/",
    "*.bak", 
    "*_backup*",
    "*.broken",
]

[tool.pylint.MASTER]
ignore-paths = [
    "backup/.*",
    ".*\\.bak",
    ".*_backup.*",
    ".*\\.broken",
]